src/styles/components/blockquotes.scss
@import 'variables';
@import 'mixins';

blockquote {
    border-left: 1rem solid #ccc;
    margin: 6rem -3rem;
    padding: 1rem 3rem;
    position: relative;
    quotes: '“' '”' '‘' '’';
    text-align: justify;

    &.issue {
        border: 0;
        display: block;
        margin: 6rem auto;
        max-width: 90%;
        padding: 0;
        text-align: center;
    }

    &::after,
    &::before {
        color: rgba(color(black), 0.1);
        font-size: 15em;
        line-height: 0;
        vertical-align: -0.4em;
    }

    &::before {
        content: open-quote;
        left: 0.05em;
        position: absolute;
        top: 0.25em;
    }

    &::after {
        bottom: -0.3em;
        content: close-quote;
        position: absolute;
        right: 0.05em;
    }
}

